// Vitest Snapshot v1

exports[`HomepageComponent > CharacterList with data must always be the same 1`] = `
<div
  data-v-app=""
>
  
  <!--header-->
  <header
    class="header mb-6"
    data-v-5fecca80=""
    data-v-b6b49adf=""
  >
    <div
      class="container"
      data-v-b6b49adf=""
    >
      <h1
        class="has-text-warning py-6 has-text-centered is-family-monospace is-size-1"
        data-v-b6b49adf=""
      >
         Rick and Morty 
      </h1>
    </div>
  </header>
  <!--if characters more than 0-->
  <section
    data-v-5fecca80=""
  >
    <!--details-->
    
    <!--modal-->
    <div
      class="modal"
      data-v-5fecca80=""
    >
      <div
        class="modal-background"
      />
      <div
        class="modal-card"
      >
        <!--header-->
        <header
          class="modal-card-head"
        >
          <!--title/character_name-->
          <p
            class="modal-card-title"
          >
            character: 
          </p>
          <!--close button-->
          <button
            aria-label="close"
            class="button is-delete is-danger delete"
          >
            Close 
          </button>
        </header>
        <!--body/content-->
        <section
          class="modal-card-body"
        >
          <div
            class="columns"
          >
            <!--character_image-->
            <div
              class="column is-4"
            >
              <figure
                class="image is-128x128 mx-auto mb-10px"
              >
                <img
                  alt="{{ character?.origin.name }}"
                  class="is-rounded"
                />
              </figure>
            </div>
            <div
              class="column is-8"
            >
              <ul>
                <!--character_Origin-->
                <li>
                  <strong
                    class="is-inline has-text-primary"
                  >
                     Origin: 
                  </strong>
                   
                </li>
                <!--character_status-->
                <li>
                  <strong
                    class="is-inline has-text-primary"
                  >
                    Status: 
                  </strong>
                   
                </li>
                <!--character_gender-->
                <li>
                  <strong
                    class="is-inline has-text-primary"
                  >
                     gender: 
                  </strong>
                   
                </li>
                <!--character_species-->
                <li>
                  <strong
                    class="is-inline has-text-primary"
                  >
                     species: 
                  </strong>
                   
                </li>
                <!--character_lacation-->
                <li>
                  <strong
                    class="is-inline has-text-primary"
                  >
                     location: 
                  </strong>
                   
                </li>
              </ul>
            </div>
          </div>
        </section>
      </div>
    </div>
    
    <!--list-->
    <!--container-->
    <div
      class="container"
      data-v-5fecca80=""
    >
      <!--columns-->
      <ul
        class="columns is-multiline"
        data-v-5fecca80=""
      >
        
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/1.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Rick Sanchez
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    51
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/2.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Morty Smith
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    51
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/3.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Summer Smith
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    42
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/4.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Beth Smith
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    42
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/5.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Jerry Smith
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    39
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/6.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Abadango Cluster Princess
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    1
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/7.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Abradolf Lincler
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    2
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/8.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Adjudicator Rick
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    1
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/9.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Agency Director
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    1
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        <li
          class="column is-3"
          data-v-5fecca80=""
        >
          <!--card-->
          <div
            class="card p-0 is-clickable"
            data-v-5fecca80=""
          >
            <!--card image-->
            <div
              class="card-image"
              data-v-5fecca80=""
            >
              <figure
                class="image is-4by3"
                data-v-5fecca80=""
              >
                <img
                  data-v-5fecca80=""
                  src="https://rickandmortyapi.com/api/character/avatar/10.jpeg"
                />
              </figure>
            </div>
            <!--card content-->
            <div
              class="card-content"
              data-v-5fecca80=""
            >
              <ul
                data-v-5fecca80=""
              >
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    Alan Rails
                  </strong>
                </li>
                <li
                  data-v-5fecca80=""
                >
                  <strong
                    class="has-text-white"
                    data-v-5fecca80=""
                  >
                    episodes:
                  </strong>
                   
                  <span
                    class="tag has-background-primary mt-4"
                    data-v-5fecca80=""
                  >
                    1
                  </span>
                </li>
              </ul>
            </div>
          </div>
        </li>
        
      </ul>
    </div>
  </section>
  <!--footer-->
  <footer
    class="footer has-background-gray mt-6 py-4"
    data-v-5fecca80=""
    data-v-a74b6634=""
  >
    <div
      class="container"
      data-v-a74b6634=""
    >
      <div
        class="content has-text-left has-text-grey"
        data-v-a74b6634=""
      >
        <!--footer title-->
        <h1
          class="mb-6 has-text-warning"
          data-v-a74b6634=""
        >
          Rick and Morty
        </h1>
        <!--footer columns-->
        <div
          class="columns"
          data-v-a74b6634=""
        >
          <!--footer aboutus-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              About Us
            </h6>
            <p
              class="has-text-center has-text-justified"
              data-v-a74b6634=""
            >
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
            </p>
          </div>
          <!--footer links-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Important
            </h6>
            <ul
              data-v-a74b6634=""
            >
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <!--footer links-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Important
            </h6>
            <ul
              data-v-a74b6634=""
            >
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <!--footer Subscribe-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Subscribe
            </h6>
            <div
              class="control has-icons-left"
              data-v-a74b6634=""
            >
              <p
                class="control has-icons-left has-icons-right"
                data-v-a74b6634=""
              >
                <input
                  class="input"
                  data-v-a74b6634=""
                  placeholder="Email"
                  type="email"
                />
                <span
                  class="icon is-small is-left"
                  data-v-a74b6634=""
                >
                  <i
                    class="fas fa-envelope"
                    data-v-a74b6634=""
                  />
                </span>
                <span
                  class="icon is-small is-right"
                  data-v-a74b6634=""
                >
                  <i
                    class="fas fa-check"
                    data-v-a74b6634=""
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
  
</div>
`;

exports[`HomepageComponent > CharacterList without data must always be the same 1`] = `
<div
  data-v-app=""
>
  
  <!--header-->
  <header
    class="header mb-6"
    data-v-5fecca80=""
    data-v-b6b49adf=""
  >
    <div
      class="container"
      data-v-b6b49adf=""
    >
      <h1
        class="has-text-warning py-6 has-text-centered is-family-monospace is-size-1"
        data-v-b6b49adf=""
      >
         Rick and Morty 
      </h1>
    </div>
  </header>
  <!--if characters more than 0-->
  
  <!--if characters more than 0-->
  <section
    class="notification is-warning is-fullwidth"
    data-v-5fecca80=""
  >
    OOps! some thing wrong has happened
  </section>
  
  <!--footer-->
  <footer
    class="footer has-background-gray mt-6 py-4"
    data-v-5fecca80=""
    data-v-a74b6634=""
  >
    <div
      class="container"
      data-v-a74b6634=""
    >
      <div
        class="content has-text-left has-text-grey"
        data-v-a74b6634=""
      >
        <!--footer title-->
        <h1
          class="mb-6 has-text-warning"
          data-v-a74b6634=""
        >
          Rick and Morty
        </h1>
        <!--footer columns-->
        <div
          class="columns"
          data-v-a74b6634=""
        >
          <!--footer aboutus-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              About Us
            </h6>
            <p
              class="has-text-center has-text-justified"
              data-v-a74b6634=""
            >
              Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
            </p>
          </div>
          <!--footer links-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Important
            </h6>
            <ul
              data-v-a74b6634=""
            >
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <!--footer links-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Important
            </h6>
            <ul
              data-v-a74b6634=""
            >
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
              <li
                data-v-a74b6634=""
              >
                <a
                  class="has-text-white"
                  data-v-a74b6634=""
                  href="#"
                >
                  Link
                </a>
              </li>
            </ul>
          </div>
          <!--footer Subscribe-->
          <div
            class="column"
            data-v-a74b6634=""
          >
            <h6
              data-v-a74b6634=""
            >
              Subscribe
            </h6>
            <div
              class="control has-icons-left"
              data-v-a74b6634=""
            >
              <p
                class="control has-icons-left has-icons-right"
                data-v-a74b6634=""
              >
                <input
                  class="input"
                  data-v-a74b6634=""
                  placeholder="Email"
                  type="email"
                />
                <span
                  class="icon is-small is-left"
                  data-v-a74b6634=""
                >
                  <i
                    class="fas fa-envelope"
                    data-v-a74b6634=""
                  />
                </span>
                <span
                  class="icon is-small is-right"
                  data-v-a74b6634=""
                >
                  <i
                    class="fas fa-check"
                    data-v-a74b6634=""
                  />
                </span>
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </footer>
  
</div>
`;
